lab1/Test/L1-A-13-79.output
Error Type B at Line 1
Error Type A at Line 6
Error Type B at Line 10
Error Type B at Line 16
Error Type B at Line 22
Error Type B at Line 26
Error Type B at Line 32
Error Type B at Line 33
Error Type B at Line 41
